added oauth2 and pagination